--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,53 @@
-<p>
-login works!
-</p>
+<div class="banner">
+	<div class="overlay">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 ">
+					<div class="form-bg">
+            <h2 class="text-center">SIGN UP</h2>
+						<form class="form-horizontal">
+							<div class="form-group">
+								<div>
+                  <input type="text" name="name" required>
+                  <label>Name</label>
+                  <span class="border"></span>
+								</div>
+							</div>
+              <div class="form-group">
+								<div>
+                  <input type="email" name="email" required>
+                  <label>Email</label>
+                  <span class="border"></span>
+								</div>
+							</div><div class="form-group">
+								<div>
+                  <input type="password" name="password" required>
+                  <label>Password</label>
+                  <span class="border"></span>
+								</div>
+							</div>
+<!-- 							
+              <div class="form-group">
+								<div>
+                  <textarea required></textarea>
+                  <label>Message</label>
+                  <span class="border"></span>
+								</div>
+							</div> -->
+
+							<div class="form-group text-center">
+								<div class="col-xs-12 ho">
+									<button type="submit" class="slide">Sign Up<span></span><span></span><span></span><span></span></button>
+                    
+								</div>
+								<!-- <div class="col-xs-offset-2 col-xs-3">
+									<button type="reset" class="btn btn-danger">Clear</button>
+								</div> -->
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
