--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,7 +8,7 @@
     color: #000;
 }
 .overlay{
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(0, 0, 0, 0.2);
     height: inherit;
     min-height: inherit;
 }
@@ -19,8 +19,8 @@
     transform: translate(-50%,0%); */
     margin-top: 80px;
     padding: 40px;
-    background: -moz-linear-gradient(top, #7579ff, #b224ef);
-    background-image: linear-gradient(to bottom, #7579ff, #b224ef);
+    background: -moz-linear-gradient(top, rgba(117,121,255,0.2), rgba(178,36,239,0.2));
+    background-image: linear-gradient(to bottom, rgba(117,121,255,0.2), rgba(178,36,239,0.2));
     /* border: 1px solid #b224ef; */
     border-radius: 8px;
     box-sizing: border-box;
