--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,15 +4,15 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 ">
 					<div class="form-bg">
-            <h2 class="text-center">SIGN UP</h2>
+            <h2 class="text-center">{{title | uppercase}}</h2>
 						<form class="form-horizontal">
-							<div class="form-group">
+							<!-- <div class="form-group">
 								<div>
                   <input type="text" name="name" required>
                   <label>Name</label>
                   <span class="border"></span>
 								</div>
-							</div>
+							</div> -->
               <div class="form-group">
 								<div>
                   <input type="email" name="email" required>
@@ -37,7 +37,7 @@
 
 							<div class="form-group text-center">
 								<div class="col-xs-12 ho">
-									<button type="submit" class="slide">Sign Up<span></span><span></span><span></span><span></span></button>
+									<button type="submit" class="slide">{{title | uppercase}}<span></span><span></span><span></span><span></span></button>
                     
 								</div>
 								<!-- <div class="col-xs-offset-2 col-xs-3">
