--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -36,12 +36,12 @@
 							</div>
 
 							<div class="form-group text-center">
-								<div class="col-xs-offset-2 col-xs-3">
-									<button type="submit" class="btn btn-warning">Submit</button>
+								<div class="col-xs-6 ho">
+									<button type="submit" class="slide">Submit<span></span><span></span><span></span><span></span></button>
 
 								</div>
-								<div class="col-xs-offset-2 col-xs-3">
-									<button type="reset" class="btn btn-danger">Clear</button>
+								<div class="col-xs-6 ho">
+									<button type="reset" class="slide danger">Clear<span class="red"></span><span class="red"></span><span class="red"></span><span class="red"></span></button>
 								</div>
 							</div>
 						</form>
