--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,14 +1,14 @@
 .banner{
     background-image: url(https://images.unsplash.com/photo-1511884642898-4c92249e20b6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1080&q=100);
     height: 100vh;
-    min-height: 320px;
+    min-height: 480px;
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover; 
     color: #000;
 }
 .overlay{
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.3);
     height: inherit;
     min-height: inherit;
 }
@@ -18,7 +18,7 @@
     left: 50%;
     transform: translate(-50%,0%); */
     margin-top: 80px;
-    padding: 40px;
+    padding: 20px 40px 0px 40px;
     background: -moz-linear-gradient(top, rgba(117,121,255,0.2), rgba(178,36,239,0.2));
     background-image: linear-gradient(to bottom, rgba(117,121,255,0.2), rgba(178,36,239,0.2));
     /* border: 1px solid #b224ef; */
