--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -19,13 +19,14 @@
                   <label>Email</label>
                   <span class="border"></span>
 								</div>
-							</div><div class="form-group">
+							</div>
+              <!-- <div class="form-group">
 								<div>
                   <input type="password" name="password" required>
                   <label>Password</label>
                   <span class="border"></span>
 								</div>
-							</div>
+							</div> -->
 							
               <div class="form-group">
 								<div>
